[package]
name = "rssfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
feed-rs = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1.38", features = ["rt"] }
futures = "0.3"
serde_json = "1"
anyhow = "1"
